Partially prevented Shadow Glaive from targeting immortal entities